[package]
name = "svn-poc"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
compute = { git = "https://github.com/GatewayLabs/circuit-sdk" }
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
redis = { version = "0.22.0", features = ["tokio-comp"] }
actix-web = "4.0"